--- a/AV_GoD.ipynb
+++ b/AV_GoD.ipynb
@@ -7,6 +7,7 @@
       "version": "0.3.2",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,7 +62,7 @@
         "gauth.credentials = GoogleCredentials.get_application_default()\n",
         "drive = GoogleDrive(gauth)"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -78,11 +79,11 @@
       "metadata": {
         "id": "4vuC7iFm0yie",
         "colab_type": "code",
+        "outputId": "889015fb-2e6f-45f5-f367-0ed7fbe66c72",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 505
-        },
-        "outputId": "889015fb-2e6f-45f5-f367-0ed7fbe66c72"
+        }
       },
       "source": [
         "# Download a file based on its file ID.\n",
@@ -92,7 +93,7 @@
         "downloaded = drive.CreateFile({'id': file_id})\n",
         "downloaded.GetContentFile('train-ship classification.zip')"
       ],
-      "execution_count": 69,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "error",
@@ -241,7 +242,7 @@
         "train_csv = pd.read_csv('./data/train.csv')\n",
         "train_csv.describe()"
       ],
-      "execution_count": 88,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -338,7 +339,7 @@
       "source": [
         "train_csv.head()"
       ],
-      "execution_count": 74,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -432,11 +433,11 @@
       "metadata": {
         "id": "j0jDReUAyVDj",
         "colab_type": "code",
+        "outputId": "0b27083c-60c9-43fd-b677-d23ce8336e5e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 101
-        },
-        "outputId": "0b27083c-60c9-43fd-b677-d23ce8336e5e"
+        }
       },
       "source": [
         "for i in range(5):\n",
@@ -446,7 +447,7 @@
         "  #imgplot = plt.imshow(img)\n",
         "  #plt.show()"
       ],
-      "execution_count": 27,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -509,16 +510,16 @@
       "metadata": {
         "id": "xKR0q3vJpZjy",
         "colab_type": "code",
+        "outputId": "ec0262b4-66a1-4445-8421-7cbcd12877c8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "ec0262b4-66a1-4445-8421-7cbcd12877c8"
+        }
       },
       "source": [
         "dim_dict"
       ],
-      "execution_count": 98,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -577,16 +578,16 @@
       "metadata": {
         "id": "rABDRD5g5DqQ",
         "colab_type": "code",
+        "outputId": "2e39a08a-76c7-452a-d6be-63abfc090656",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
-        },
-        "outputId": "2e39a08a-76c7-452a-d6be-63abfc090656"
+        }
       },
       "source": [
         "train_csv.head()"
       ],
-      "execution_count": 76,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -685,16 +686,16 @@
       "metadata": {
         "id": "TaVlx702528P",
         "colab_type": "code",
+        "outputId": "cbe7953c-f0dd-4b7a-8c51-ba45c478de9f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 118
-        },
-        "outputId": "cbe7953c-f0dd-4b7a-8c51-ba45c478de9f"
+        }
       },
       "source": [
         "train_Y.head()"
       ],
-      "execution_count": 39,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -720,16 +721,16 @@
       "metadata": {
         "id": "qpBtOu4u65dH",
         "colab_type": "code",
+        "outputId": "5edd25e5-2589-4ab0-b848-5857cee60086",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "5edd25e5-2589-4ab0-b848-5857cee60086"
+        }
       },
       "source": [
         "train_csv.raw.shape"
       ],
-      "execution_count": 46,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -768,16 +769,16 @@
       "metadata": {
         "id": "YcVAv4SaGky3",
         "colab_type": "code",
+        "outputId": "5ee96db5-2214-4cf3-f9a8-e6cbe69b7bbe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "5ee96db5-2214-4cf3-f9a8-e6cbe69b7bbe"
+        }
       },
       "source": [
         "max_width"
       ],
-      "execution_count": 103,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -798,16 +799,16 @@
       "metadata": {
         "id": "dtngx0wwJfHl",
         "colab_type": "code",
+        "outputId": "5e692757-f5db-4a45-ada4-a7f1315c531f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "5e692757-f5db-4a45-ada4-a7f1315c531f"
+        }
       },
       "source": [
         "max_height"
       ],
-      "execution_count": 104,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -828,16 +829,16 @@
       "metadata": {
         "id": "kOaDS6iPi6Wf",
         "colab_type": "code",
+        "outputId": "955cd1ff-f697-4550-f747-f33f2d753ef0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 101
-        },
-        "outputId": "955cd1ff-f697-4550-f747-f33f2d753ef0"
+        }
       },
       "source": [
         ""
       ],
-      "execution_count": 96,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -885,16 +886,16 @@
       "metadata": {
         "id": "xcvn8vfjJs5a",
         "colab_type": "code",
+        "outputId": "eca65b74-bc79-4031-8a64-e099e5b0a1a5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "eca65b74-bc79-4031-8a64-e099e5b0a1a5"
+        }
       },
       "source": [
         "count"
       ],
-      "execution_count": 83,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -915,16 +916,16 @@
       "metadata": {
         "id": "1dHxB7qSLF2I",
         "colab_type": "code",
+        "outputId": "61411def-ce00-4a76-d44a-90ac56a66a4e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "61411def-ce00-4a76-d44a-90ac56a66a4e"
+        }
       },
       "source": [
         "count/len(train_csv)"
       ],
-      "execution_count": 72,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
