--- a/AV_GoD.ipynb
+++ b/AV_GoD.ipynb
@@ -374,27 +374,30 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 85
         },
-        "outputId": "323f2203-604f-4452-a8c0-9b25ab8c3e63"
+        "outputId": "5f1fae7e-8d4a-4a29-f061-eb199df8b7b8"
       },
       "source": [
         "# Null check\n",
-        "train_csv.category.isnull().sum()"
+        "train_csv.isnull().sum()"
       ],
-      "execution_count": 11,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0"
+              "image       0\n",
+              "category    0\n",
+              "raw         0\n",
+              "dtype: int64"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 18
         }
       ]
     },
@@ -417,11 +420,35 @@
       },
       "source": [
         "base_url = './data/images/'\n",
-        "\n",
+        "# Create a column to represent raw image data\n",
         "train_csv['raw'] = [mpimg.imread(base_url+image_url) for image_url in train_csv.image]"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Qs3bwNQ9z38u",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 1.3 Image Processing"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lM-Hf19U0CeD",
+        "colab_type": "text"
+      },
+      "source": [
+        "\n",
+        "\n",
+        "*   Some of the images can be of gray scale having just two channels\n",
+        "*   Such images needs to be converted to 3 channels (RGB values same as in single channel)\n",
+        "\n"
+      ]
     },
     {
       "cell_type": "code",
@@ -447,7 +474,7 @@
       "metadata": {
         "id": "xKR0q3vJpZjy",
         "colab_type": "code",
-        "outputId": "ec0262b4-66a1-4445-8421-7cbcd12877c8",
+        "outputId": "0512b087-6dd8-4f0c-8398-bf30a66434dc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -456,19 +483,19 @@
       "source": [
         "dim_dict"
       ],
-      "execution_count": 0,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "{3: 6252}"
+              "{2: 104, 3: 6148}"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 98
+          "execution_count": 14
         }
       ]
     },
@@ -487,121 +514,50 @@
       "metadata": {
         "id": "swRpyFjKqbHA",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 102
+        },
+        "outputId": "d1dd8dd6-aa92-44a5-8e2b-9b86e1e9cab3"
       },
       "source": [
         "for i in range(len(train_csv.raw)):\n",
         "  if(len(train_csv.raw.iloc[i].shape)==2):\n",
         "    train_csv.raw.iloc[i] = np.stack((train_csv.raw.iloc[i],)*3, axis=-1)"
       ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "azZnUFNnrmTx",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "train_csv.isnull()."
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "rABDRD5g5DqQ",
-        "colab_type": "code",
-        "outputId": "2e39a08a-76c7-452a-d6be-63abfc090656",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 195
-        }
-      },
-      "source": [
-        "train_csv.head()"
-      ],
-      "execution_count": 0,
+      "execution_count": 15,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>image</th>\n",
-              "      <th>category</th>\n",
-              "      <th>raw</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>2823080.jpg</td>\n",
-              "      <td>1</td>\n",
-              "      <td>[[[84, 153, 210], [84, 153, 210], [84, 153, 21...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>2870024.jpg</td>\n",
-              "      <td>1</td>\n",
-              "      <td>[[[157, 157, 157], [153, 153, 153], [150, 150,...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>2662125.jpg</td>\n",
-              "      <td>2</td>\n",
-              "      <td>[[[220, 219, 224], [220, 219, 224], [220, 219,...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>2900420.jpg</td>\n",
-              "      <td>3</td>\n",
-              "      <td>[[[118, 140, 151], [136, 158, 169], [119, 143,...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>2804883.jpg</td>\n",
-              "      <td>2</td>\n",
-              "      <td>[[[117, 152, 182], [118, 153, 183], [118, 153,...</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "         image  category                                                raw\n",
-              "0  2823080.jpg         1  [[[84, 153, 210], [84, 153, 210], [84, 153, 21...\n",
-              "1  2870024.jpg         1  [[[157, 157, 157], [153, 153, 153], [150, 150,...\n",
-              "2  2662125.jpg         2  [[[220, 219, 224], [220, 219, 224], [220, 219,...\n",
-              "3  2900420.jpg         3  [[[118, 140, 151], [136, 158, 169], [119, 143,...\n",
-              "4  2804883.jpg         2  [[[117, 152, 182], [118, 153, 183], [118, 153,..."
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 76
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/pandas/core/indexing.py:190: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame\n",
+            "\n",
+            "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+            "  self._setitem_with_indexer(indexer, value)\n"
+          ],
+          "name": "stderr"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_TtR-0b1FSkj",
+        "colab_type": "text"
+      },
+      "source": [
+        "### 3. Splitting train-test data"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YiSVikQ7064l",
+        "colab_type": "text"
+      },
+      "source": [
+        "Just splitting data in to training and test set"
       ]
     },
     {
@@ -623,34 +579,22 @@
       "metadata": {
         "id": "TaVlx702528P",
         "colab_type": "code",
-        "outputId": "cbe7953c-f0dd-4b7a-8c51-ba45c478de9f",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 118
-        }
+        "colab": {}
       },
       "source": [
-        "train_Y.head()"
+        "del train_X, test_X, train_Y, test_Y"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "2169    1\n",
-              "3612    1\n",
-              "194     3\n",
-              "1533    1\n",
-              "4225    1\n",
-              "Name: category, dtype: int64"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 39
-        }
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OZPfyYnXFK-B",
+        "colab_type": "text"
+      },
+      "source": [
+        "### 3.3 Encoding category to One-Hot encoding"
       ]
     },
     {
@@ -658,29 +602,99 @@
       "metadata": {
         "id": "qpBtOu4u65dH",
         "colab_type": "code",
-        "outputId": "5edd25e5-2589-4ab0-b848-5857cee60086",
+        "outputId": "dfe3d134-6c10-4bd2-835e-ca41436bb61b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 68
         }
       },
       "source": [
-        "train_csv.raw.shape"
+        "from sklearn.preprocessing import OneHotEncoder\n",
+        "enc = OneHotEncoder(categories='auto')\n",
+        "enc.fit(np.array(train_csv.category).reshape(-1,1))"
       ],
-      "execution_count": 0,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(6252,)"
+              "OneHotEncoder(categorical_features=None, categories='auto', drop=None,\n",
+              "              dtype=<class 'numpy.float64'>, handle_unknown='error',\n",
+              "              n_values=None, sparse=True)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 46
+          "execution_count": 60
         }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gga0YFsG49Oy",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "train_csv['encoded_category'] = enc.transform(np.array(train_csv.category).reshape(-1,1)).toarray().tolist()\n",
+        "train_csv.encoded_category.head()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uzaw2_frE-m9",
+        "colab_type": "text"
+      },
+      "source": [
+        "Now we have encoded category list"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YxuvYnTYFbJ4",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 2. Image preprocessing"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Oqkuhee-FeUL",
+        "colab_type": "text"
+      },
+      "source": [
+        "Images in the dataset are of different size <br>\n",
+        "In order to feed it to the network, we need to make them to the same size <br>\n",
+        "Hence, let find out maximum dimensions of the image and pad smaller images with the same"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Flwm24ORFyhP",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### Doubt: Should I first do augmentation then padding or viceversa ?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Qt66PQJfGKvY",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Calculating maximum image size:"
       ]
     },
     {
@@ -706,7 +720,7 @@
       "metadata": {
         "id": "YcVAv4SaGky3",
         "colab_type": "code",
-        "outputId": "5ee96db5-2214-4cf3-f9a8-e6cbe69b7bbe",
+        "outputId": "9f700a14-4d37-4ce3-93c3-47945921425a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -715,7 +729,7 @@
       "source": [
         "max_width"
       ],
-      "execution_count": 0,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -727,7 +741,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 103
+          "execution_count": 74
         }
       ]
     },
@@ -736,7 +750,7 @@
       "metadata": {
         "id": "dtngx0wwJfHl",
         "colab_type": "code",
-        "outputId": "5e692757-f5db-4a45-ada4-a7f1315c531f",
+        "outputId": "36110533-473c-40b1-c260-43c0a2bb6721",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -745,7 +759,7 @@
       "source": [
         "max_height"
       ],
-      "execution_count": 0,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -757,7 +771,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 104
+          "execution_count": 75
         }
       ]
     },
