--- a/AV_GoD.ipynb
+++ b/AV_GoD.ipynb
@@ -1516,7 +1516,7 @@
             "Use tf.cast instead.\n",
             "Train on 4376 samples, validate on 1876 samples\n",
             "Epoch 1/5\n",
-            "2880/4376 [==================>...........] - ETA: 6:10 - loss: 13.7039 - acc: 0.1497"
+            "3488/4376 [======================>.......] - ETA: 3:39 - loss: 13.6857 - acc: 0.1508"
           ],
           "name": "stdout"
         }
