--- a/AV_GoD_Transfer_learning.ipynb
+++ b/AV_GoD_Transfer_learning.ipynb
@@ -727,11 +727,7 @@
       "metadata": {
         "id": "wYBn3LsxH3l_",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 272
-        },
-        "outputId": "16416100-f977-4dce-85ea-13c5362d2e63"
+        "colab": {}
       },
       "source": [
         "model.compile(optimizer='Adam',loss='categorical_crossentropy',metrics=['accuracy'])\n",
@@ -739,30 +735,43 @@
         "# loss function will be categorical cross entropy\n",
         "# evaluation metric will be accuracy\n",
         "\n",
-        "step_size_train=train_generator.n//train_generator.batch_size\n",
+        "step_size_train=train_generator.n//train_generator.batch_size"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4d6UZ4uAdPKv",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 202
+        },
+        "outputId": "66bd31cb-2c28-4a58-bcf4-9d477808280f"
+      },
+      "source": [
         "model.fit_generator(generator=train_generator,\n",
         "                   steps_per_epoch=step_size_train,\n",
-        "                    \n",
+        "                    #validation_data=test_generator,\n",
         "                   epochs=5)"
       ],
-      "execution_count": 22,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/math_ops.py:3066: to_int32 (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Use tf.cast instead.\n",
             "Epoch 1/5\n",
-            "97/97 [==============================] - 13s 133ms/step - loss: 0.6865 - acc: 0.7513\n",
+            "68/68 [==============================] - 8s 119ms/step - loss: 0.2076 - acc: 0.9214\n",
             "Epoch 2/5\n",
-            "97/97 [==============================] - 11s 116ms/step - loss: 0.3350 - acc: 0.8718\n",
+            "68/68 [==============================] - 8s 112ms/step - loss: 0.1189 - acc: 0.9536\n",
             "Epoch 3/5\n",
-            "97/97 [==============================] - 11s 112ms/step - loss: 0.2741 - acc: 0.8963\n",
+            "68/68 [==============================] - 8s 111ms/step - loss: 0.1648 - acc: 0.9350\n",
             "Epoch 4/5\n",
-            "97/97 [==============================] - 11s 112ms/step - loss: 0.2248 - acc: 0.9167\n",
+            "68/68 [==============================] - 8s 111ms/step - loss: 0.1037 - acc: 0.9587\n",
             "Epoch 5/5\n",
-            "97/97 [==============================] - 11s 109ms/step - loss: 0.1760 - acc: 0.9315\n"
+            "68/68 [==============================] - 8s 112ms/step - loss: 0.0956 - acc: 0.9659\n"
           ],
           "name": "stdout"
         },
@@ -770,13 +779,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7f402fa62f98>"
+              "<keras.callbacks.History at 0x7f3e21565048>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 49
         }
       ]
     },
@@ -784,6 +793,22 @@
       "cell_type": "code",
       "metadata": {
         "id": "MyAJzeuUVtFX",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "filenames = test_generator.filenames\n",
+        "nb_samples = len(filenames)\n",
+        "\n",
+        "predict = model.predict_generator(test_generator,steps = nb_samples)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "trRK7zy8gTqQ",
         "colab_type": "code",
         "colab": {}
       },
