--- a/AV_GoD_Transfer_learning.ipynb
+++ b/AV_GoD_Transfer_learning.ipynb
@@ -699,7 +699,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "d23b6374-5b3f-4666-864e-a7d63b31495d"
+        "outputId": "89ca32a1-3e6c-473d-92a0-3e2cd2c02e09"
       },
       "source": [
         "test_datagen=ImageDataGenerator(preprocessing_function=preprocess_input) #included in our dependencies\n",
@@ -711,7 +711,7 @@
         "                                                 class_mode='categorical',\n",
         "                                                 shuffle=True)"
       ],
-      "execution_count": 42,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
@@ -809,6 +809,126 @@
       "cell_type": "code",
       "metadata": {
         "id": "trRK7zy8gTqQ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "af4c4f60-2115-4c98-dfd9-6095d21b134b"
+      },
+      "source": [
+        "len(predict)"
+      ],
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "117336"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 54
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8Wfh7Z7liTtK",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "409ac2e9-e50c-4218-dca4-e5a69564ffea"
+      },
+      "source": [
+        "len(test_generator)"
+      ],
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "30"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 55
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "O1UyJaKPiZ2-",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ab19aafb-57e4-4391-c473-f15096330b20"
+      },
+      "source": [
+        "nb_samples"
+      ],
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1876"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jCQQHwRJidb-",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "2fc85f59-6036-418f-c93e-0cdda705ea2f"
+      },
+      "source": [
+        "predict.shape"
+      ],
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(117336, 5)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 57
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0XaVlTYTijLB",
         "colab_type": "code",
         "colab": {}
       },
