--- a/AV_GoD_Transfer_learning.ipynb
+++ b/AV_GoD_Transfer_learning.ipynb
@@ -747,45 +747,26 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 202
+          "height": 50
         },
-        "outputId": "66bd31cb-2c28-4a58-bcf4-9d477808280f"
+        "outputId": "9763f6e3-6c3e-4c68-9c23-3d0fb5e9ab3b"
       },
       "source": [
         "model.fit_generator(generator=train_generator,\n",
         "                   steps_per_epoch=step_size_train,\n",
-        "                    #validation_data=test_generator,\n",
+        "                    validation_data=test_generator,\n",
+        "                    validation_steps = nb_samples,\n",
         "                   epochs=5)"
       ],
-      "execution_count": 49,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Epoch 1/5\n",
-            "68/68 [==============================] - 8s 119ms/step - loss: 0.2076 - acc: 0.9214\n",
-            "Epoch 2/5\n",
-            "68/68 [==============================] - 8s 112ms/step - loss: 0.1189 - acc: 0.9536\n",
-            "Epoch 3/5\n",
-            "68/68 [==============================] - 8s 111ms/step - loss: 0.1648 - acc: 0.9350\n",
-            "Epoch 4/5\n",
-            "68/68 [==============================] - 8s 111ms/step - loss: 0.1037 - acc: 0.9587\n",
-            "Epoch 5/5\n",
-            "68/68 [==============================] - 8s 112ms/step - loss: 0.0956 - acc: 0.9659\n"
+            "67/68 [============================>.] - ETA: 0s - loss: 0.0546 - acc: 0.9781"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<keras.callbacks.History at 0x7f3e21565048>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 49
         }
       ]
     },
