--- a/AV_GoD_Transfer_learning.ipynb
+++ b/AV_GoD_Transfer_learning.ipynb
@@ -747,7 +747,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 50
+          "height": 151
         },
         "outputId": "9763f6e3-6c3e-4c68-9c23-3d0fb5e9ab3b"
       },
@@ -764,7 +764,13 @@
           "output_type": "stream",
           "text": [
             "Epoch 1/5\n",
-            "67/68 [============================>.] - ETA: 0s - loss: 0.0546 - acc: 0.9781"
+            "68/68 [==============================] - 215s 3s/step - loss: 0.0552 - acc: 0.9777 - val_loss: 0.6479 - val_acc: 0.8187\n",
+            "Epoch 2/5\n",
+            "68/68 [==============================] - 215s 3s/step - loss: 0.0287 - acc: 0.9910 - val_loss: 0.9402 - val_acc: 0.7900\n",
+            "Epoch 3/5\n",
+            "68/68 [==============================] - 213s 3s/step - loss: 0.0266 - acc: 0.9913 - val_loss: 0.8672 - val_acc: 0.8208\n",
+            "Epoch 4/5\n",
+            "67/68 [============================>.] - ETA: 0s - loss: 0.0629 - acc: 0.9758"
           ],
           "name": "stdout"
         }
