--- a/AV_GoD_Transfer_learning.ipynb
+++ b/AV_GoD_Transfer_learning.ipynb
@@ -1504,7 +1504,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "7a0b4f53-67c0-4a18-f4bc-fdf1198546b7"
+        "outputId": "5d438f08-3991-4d01-bced-b6c9f63de884"
       },
       "source": [
         "Test_datagen=ImageDataGenerator(preprocessing_function=preprocess_input) #included in our dependencies\n",
@@ -1513,10 +1513,9 @@
         "                                                 target_size=(224,224),\n",
         "                                                 color_mode='rgb',\n",
         "                                                 batch_size=64,\n",
-        "                                                 class_mode='categorical',\n",
-        "                                                 shuffle=True)"
+        "                                                 class_mode='categorical')"
       ],
-      "execution_count": 102,
+      "execution_count": 130,
       "outputs": [
         {
           "output_type": "stream",
@@ -1565,36 +1564,36 @@
           "base_uri": "https://localhost:8080/",
           "height": 235
         },
-        "outputId": "6121b974-8c96-41e3-a704-cff8c8944af9"
+        "outputId": "4e107bbd-6004-4e8c-f5f1-6aabab3a7a2d"
       },
       "source": [
         "predict"
       ],
-      "execution_count": 106,
+      "execution_count": 136,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[2.61077560e-09, 1.08847324e-11, 1.00000000e+00, 6.12951259e-13,\n",
-              "        2.21924590e-10],\n",
-              "       [2.94703003e-02, 6.74583949e-03, 9.60408926e-01, 5.41621528e-04,\n",
-              "        2.83332891e-03],\n",
-              "       [5.12459888e-15, 1.64963190e-13, 5.47798272e-15, 1.00000000e+00,\n",
-              "        6.48635266e-17],\n",
+              "array([[1.00000000e+00, 1.39681990e-11, 2.01387174e-09, 5.20253111e-11,\n",
+              "        3.33480932e-09],\n",
+              "       [6.48771857e-06, 9.99989390e-01, 7.95631593e-07, 9.14368343e-07,\n",
+              "        2.50872745e-06],\n",
+              "       [4.14441079e-02, 9.07672048e-01, 1.40681965e-02, 6.82320772e-03,\n",
+              "        2.99924444e-02],\n",
               "       ...,\n",
-              "       [1.39927181e-09, 6.02940094e-12, 1.00000000e+00, 2.69349105e-13,\n",
-              "        2.69343353e-10],\n",
-              "       [2.64619070e-04, 1.04152205e-04, 9.99437034e-01, 1.32828764e-05,\n",
-              "        1.81031268e-04],\n",
-              "       [4.64836275e-03, 6.41179128e-08, 4.24605673e-07, 1.99731471e-06,\n",
-              "        9.95349228e-01]], dtype=float32)"
+              "       [1.67164463e-10, 3.29607029e-13, 1.00000000e+00, 1.34553479e-14,\n",
+              "        1.46685077e-11],\n",
+              "       [9.99895692e-01, 1.34185450e-06, 2.11323386e-05, 1.96708970e-06,\n",
+              "        7.98747060e-05],\n",
+              "       [2.93072518e-02, 1.04059139e-03, 1.86910317e-03, 2.65428377e-03,\n",
+              "        9.65128779e-01]], dtype=float32)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 106
+          "execution_count": 136
         }
       ]
     },
@@ -1603,70 +1602,150 @@
       "metadata": {
         "id": "FEVpd5Tfi_Jr",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "3f4dd992-77e3-47dc-c4f2-74e13b4b3e18"
+        "colab": {}
       },
       "source": [
-        "len(np.argmax(predict, axis=1))"
+        "ans = np.argmax(predict, axis=1)"
       ],
-      "execution_count": 109,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "171016"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 109
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "tHk_tJCsjWp3",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "d51813c1-816a-4392-bdaf-97c30c863266"
+        "colab": {}
       },
       "source": [
-        "predict.shape"
+        "test_csv = pd.read_csv('./test.csv')"
       ],
-      "execution_count": 121,
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "U1cRUufDpiNS",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "test_csv['category'] = ans"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "h1crvC40yaVv",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "test_csv.to_csv('submission.csv')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "49jI3Mo52cHy",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 195
+        },
+        "outputId": "09c84e7f-c01e-4d98-fae7-9fc4779d5416"
+      },
+      "source": [
+        "test_csv.head()"
+      ],
+      "execution_count": 145,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>image</th>\n",
+              "      <th>category</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1007700.jpg</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1011369.jpg</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1051155.jpg</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>1062001.jpg</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>1069397.jpg</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
             "text/plain": [
-              "(2680, 5)"
+              "         image  category\n",
+              "0  1007700.jpg         1\n",
+              "1  1011369.jpg         2\n",
+              "2  1051155.jpg         2\n",
+              "3  1062001.jpg         3\n",
+              "4  1069397.jpg         2"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 121
+          "execution_count": 145
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sYks7qdLjhfI",
+        "id": "FffvDT2Q2do-",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "Test_generator."
+        ""
       ],
       "execution_count": 0,
       "outputs": []
